# vcp-fd-rdd

./: .SRCINFO  .gitattributes  .gitignore  .tsan-supp  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  Cargo.toml  DEADLOCK_ANALYSIS.md  LICENSE  Makefile  PKGBUILD  README.md  ci-log-analysis-report.md  collect-data.sh  fd-rdd-analysis-search-latency.md  fd-rdd-analysis-size-composition.md  fd-rdd-memory-analysis-v2.md  fd-rdd-memory-analysis-v3.md  fd-rdd-memory-analysis.md  fd-rdd-编年史.md  fd-rdd-项目评审整改清单.md  index-size-analysis.md  optimization-assessment-report.md  review-checklist.md
.github/workflows/: bench.yml  ci.yml  fd-rdd-stress-ci.yml  release.yml  stress-boundary.yml  stress-hybrid-large-scale.yml  stress-large-scale.yml  stress-memory.yml  stress-musl.yml
.snow/: permissions.json  settings.json
helloagents/: CHANGELOG.md  project.md
helloagents/history/: index.md
helloagents/wiki/: architecture-charter.md  dynamic-rebuild-arcswap-mimalloc.md  memoir-2026-02-14.md  memoir-2026-02-15.md  memory-docid-roaring-patharena.md  memory-trigram-posting-vec.md  query-matching-segment-glob.md  reliability-deadlock-overflow.md  stage-progress.md  storage-stage-c-lsm-compaction.md  storage-v6-mmap-segments.md
scripts/: bench.sh  ci-collect-debug.sh  fd-query.sh  fd-rdd-diagnose.fish  fd-rdd.service  fs-churn.py  install.sh  profile.sh  smoke-search-syntax.sh
src/: config.rs  lib.rs  main.rs  test_util.rs  util.rs
src/core/: adaptive.rs  dag.rs  lineage.rs  mod.rs  partition.rs  rdd.rs
src/event/: ignore_filter.rs  mod.rs  recovery.rs  stream.rs  sync.rs  tiered_watch.rs  verify.rs  watcher.rs
src/index/: base_index.rs  content_filter.rs  delta_buffer.rs  file_entry.rs  file_entry_v2.rs  l1_cache.rs  l2_partition.rs  l2_partition.rs.bak  l3_cold.rs  mmap_index.rs  mod.rs  parent_index.rs  path_table.rs  path_table_v2.rs  pathtable.rs  tiered.rs
src/query/: dsl.rs  dsl_parser.rs  filter.rs  fzf.rs  matcher.rs  mod.rs  scoring.rs  server.rs  socket.rs
src/stats/: mod.rs
src/storage/: checkpoint.rs  checksum.rs  lsm.rs  mmap.rs  mod.rs  serde.rs  snapshot.rs  snapshot_legacy.rs  snapshot_v6.rs  snapshot_v7.rs  traits.rs  wal.rs
tests/: README.md  p0_allocator.rs  p0_storage_compat.rs  p1_compaction_fast.rs  p1_edge_cases.rs  p1_event_processing.rs  p1_ignore_rules.rs  p1_lsm_compaction.rs  p1_multi_root.rs  p1_poweroff_resume.rs  p1_query.rs  p1_snapshot_recovery.rs  p1_startup_repair.rs  p1_streaming_export.rs  p1_symlink_safety.rs  p1_visibility_latency.rs  p1_wal_recovery.rs  p1_watch_degradation.rs  p2_large_scale_hybrid.rs
tests/common/: fd_rdd_client.rs  mod.rs  sys_monitor.rs
重构方案包/: causal-chain-report.md
(+59 files in other folders)
