[package]
name = "fd-rdd"
version = "0.2.0"
edition = "2021"
authors = ["Piko & Aegis"]
description = "Event-driven elastic file indexer with RDD lineage"
license = "MIT"

[dependencies]
# 并行计算（类 Spark executor）
rayon = "1.8"
crossbeam = "0.8"

# 异步运行时
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

# Web 接口 (Axum)
axum = "0.7"

# 文件系统事件
notify = "6.1"

# 扫描引擎 (fd 的心脏)
ignore = "0.4"

# 内存映射（保留备用）
memmap2 = "0.9"

# RoaringBitmap（DocId posting 压缩）
roaring = "0.10"

# 序列化（snapshot）
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# 内存数据结构
dashmap = "5.5"
parking_lot = "0.12"

# 系统信息（自适应并行）
sysinfo = "0.30"
num_cpus = "1.16"

# CLI 与交互
clap = { version = "4.4", features = ["derive"] }
fuzzy-matcher = "0.3"
wildmatch = "2.1"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 路径处理
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
