[package]
name = "fd-rdd"
version = "0.3.5"
edition = "2021"
authors = ["Piko & Aegis"]
description = "Event-driven elastic file indexer with RDD lineage"
license = "MIT"

[dependencies]
rkyv = { version = "0.7", features = ["validation", "check_bytes", "size_32"] }
# 并行计算（类 Spark executor）
rayon = "1.8"
crossbeam = "0.8"

# ArcSwap：索引原子切换（后台重建不阻塞读）
arc-swap = "1.6"

# 异步运行时
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

# Web 接口 (Axum)
axum = "0.7"

# 文件系统事件
notify = "6.1"

# 扫描引擎 (fd 的心脏)
ignore = "0.4"

# 内存映射（保留备用）
memmap2 = "0.9"

# RoaringBitmap（DocId posting 压缩）
roaring = "0.10"

# 序列化（snapshot）
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# libc：用于可选的手动 RSS 回吐（malloc_trim / mimalloc collect）
libc = "0.2"

# 内存数据结构
dashmap = "5.5"
parking_lot = "0.12"

# 系统信息（自适应并行）
sysinfo = "0.30"
num_cpus = "1.16"

# CLI 与交互
clap = { version = "4.4", features = ["derive"] }
fuzzy-matcher = "0.3"
wildmatch = "2.1"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 路径处理
dirs = "5.0"

# 全局分配器：默认使用 mimalloc（降低多线程 ptmalloc arena 导致的碎片与 RSS 回吐问题）
# 如需回退到系统分配器：`cargo build --release --no-default-features`
#
# 额外说明：
# - Linux 上若系统 THP=always，mimalloc 可能因透明大页导致空壳 RSS 暴涨。
# - 启用 mimalloc 的 `no_thp` 特性会在编译期定义 `MI_NO_THP=1`，从根源禁用 THP 提示路径。
mimalloc = { version = "0.1", optional = true, default-features = false, features = ["no_thp"] }

[features]
# 默认启用 mimalloc；可用 `--no-default-features` 关闭
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
libc = "0.2"
